--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
        <button class="button-one" onclick="anime(1)">One</button>
        <button class="button-two" onclick="anime(2)">Two</button>
        <button class="button-three" onclick="anime(3)">Three</button>
+       <button class="button-four" onclick="anime(4)">Four</button>
        </div>
     <div class="cradle">
       <div class="cradle-box">
-        <span class="box"></span>
         <span class="box"></span>
         <span class="box"></span>
         <span class="box"></span>
