--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav>
-    <h1>Newton-Cradle</h1>
+    <h1>Newton's Cradle</h1>
   </nav>
   <div class="main">
     <div class="select-area">
